<resources>
    <string name="app_name" translatable="false">Finance Manager</string>
    <string name="app_name_long" translatable="false">Privacy Friendly Finance Manager</string>
    <string name="time_format_string">"dd/MM/yyyy HH:mm:ss"</string>
    <string name="balance">Balance</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="help">Help</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="please_note">Please note:</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="every">Every</string>
    <string name="until">until</string>
    <string name="forever">forever</string>
    <string name="never">never</string>
    <string name="activity_startup_init_key_store_msg">Initializing key store&#8230;</string>
    <string name="activity_startup_create_passphrase_msg">Creating passphrase&#8230;</string>
    <string name="activity_startup_decrypt_phassphrase_msg">Decrypting passphrase&#8230;</string>
    <string name="activity_startup_open_database_msg">Opening database&#8230;</string>
    <string name="activity_startup_create_and_open_database_msg">Creating and opening database&#8230;</string>
    <string name="activity_startup_migrate_database_msg">Migrating database&#8230;</string>
    <string name="nav_help_action">Help</string>
    <string name="nav_about_action">About</string>
    <string name="nav_main_action">Transaction Overview</string>
    <string name="nav_tutorial_action">Tutorial</string>
    <string name="nav_category_action">Categories</string>
    <string name="nav_drawer_toggle_open_desc">Open navigation drawer</string>
    <string name="nav_drawer_toggle_close_desc">Close navigation drawer</string>
    <string-array name="activity_help_questions">
        <item>What is Privacy Friendly Finance Manager?</item>
        <item>How do I manage my income and expenses?</item>
        <item>How can I categorize my expenses?</item>
        <item>What makes the app privacy-friendly?</item>
        <item>Which permissions requires the app?</item>
        <item>How do i delete an entry i made?</item>
        <item>What are accounts for?</item>
    </string-array>
    <string-array name="activity_help_answers">
        <item>The Privacy Friendly Finance Manager is an app to monitor personal income and expenses.</item>
        <item>A financial transaction, either income or expense, can be added to your financial history by using the + button in the toolbar. The list of financial transactions appears in the navigation menu and can be called there. Items inside the transaction list can be edited and deleted.</item>
        <item>If you go to the menu item "Categories", you can create new categories. When creating a new transaction, you can assign a category to the transaction. The total balance of the categories are displayed under the menu item "Categories".</item>
        <item>Privacy Friendly App Finance Manager does not require any permission. It further does not include any tracking mechanisms or advertisement.</item>
        <item>Privacy Friendly App Finance Manager does not require any permission.</item>
        <item>Any entry in this app, may it be a transaction, a repeating transaction, an account or a category can be deleted by swiping the entry to the left or to the right and then clicking on the appearing red trash bin button.</item>
        <item>Accounts can be used to track the money you have in a real bank account in some bank. It is possible to change the balance of the beginning of the month so you don\'t have to add all the small expenses and incomes by hand. In the Account view you get an overview of all transactions you added to the corresponding account.</item>
    </string-array>
    <string name="activity_about_title">About</string>
    <string name="activity_about_version">Version v%s</string>
    <string name="activity_about_authors">Authors: </string>
    <string name="activity_about_authors_contributors">and contributors.</string>
    <string name="activity_about_affiliation">In affiliation with</string>
    <string name="activity_about_belongs">This application belongs to the group of Privacy Friendly Apps developed by Karlsruher Institute for Technology (KIT). Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="activity_about_more_info">More information can be found on:</string>
    <string name="activity_about_github_link" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-finance-manager">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="activity_repeating_transactions_title">Repeating Transactions</string>
    <string name="repeat_text_unit_template">Repeating %UNIT%</string>
    <string name="repeat_text_unit_until_template">Repeating %UNIT% until %UNTIL%</string>
    <string name="repeat_unit_every_first_week">every week</string>
    <string name="repeat_unit_every_n_week">every %N% week</string>
    <string name="repeat_unit_every_first_month">every month</string>
    <string name="repeat_unit_every_n_month">every %N% month</string>
    <string name="repeat_ends_at">Ends at</string>
    <string name="repeat_delete_action">Delete Repeating transaction</string>
    <string name="repeat_delete_question">All generated transactions will be retained but will loose their reference to this repeating transaction.&lt;br />This can &lt;i>not&lt;/i> be undone.&lt;br />&lt;br />Are you sure you want to delete repeating transaction &lt;b>%1$s&lt;/b>?</string>
    <string name="repeat_deleted_msg">Repeating Transaction deleted</string>
    <string name="category">Category</string>
    <string name="category_plural">Categories</string>
    <string name="category_delete_dialog_title">Delete Category</string>
    <string name="category_deleted">Category deleted</string>
    <string name="dialog_category_name_hint">Enter category name</string>
    <string name="dialog_category_create_title">New Category</string>
    <string name="dialog_category_edit_title">Edit Category</string>
    <string name="dialog_category_empty_name_impossible_msg">The category must have a name</string>
    <string name="category_default_category_name">Default</string>
    <string name="activity_category_manifest_label" translatable="false">Category activity</string>
    <string name="activity_category_category_balance_month_label">Category balance of this month:</string>
    <string name="activity_category_income_month_label">Income of this month:</string>
    <string name="activity_category_expenses_month_label">Expenses of this month:</string>
    <string name="category_saved_msg">Category saved</string>
    <string name="dialog_category_name_taken_msg">A category with this name already exists. Please choose a different one.</string>
    <string name="activity_categories_empty_list_label">No categories found</string>
    <string name="activity_transaction_saved_msg">Transaction saved</string>
    <string name="activity_transaction_deleted_msg">Transaction deleted</string>
    <string name="activity_transaction_updated_msg">Transaction updated</string>
    <string name="dialog_transaction_create_title">New Transaction</string>
    <string name="dialog_transaction_edit_title">Edit Transaction</string>
    <string name="dialog_transaction_name_hint">Enter title</string>
    <string name="dialog_transaction_value_hint">Enter amount</string>
    <string name="dialog_transaction_radio_button_income_action">Income</string>
    <string name="dialog_transaction_radio_button_expense_action">Expense</string>
    <string name="dialog_transaction_date_hint">Enter date</string>
    <string name="dialog_transaction_repeating_label">Repeat transaction:</string>
    <string name="dialog_transaction_no_repetition">No repetition</string>
    <string name="dialog_transaction_zero_value_impossible_msg">In order to save your transaction, please change your amount from 0 to a value.</string>
    <string name="dialog_delete_transaction_title">Do you want to delete this transaction?</string>
    <string name="activity_transactions_empty_list_label">No transactions found</string>
    <string name="account">Account</string>
    <string name="account_delete_action">Delete Account</string>
    <string name="account_deleted_msg">Account deleted.</string>
    <string name="activity_account_beginning_month_suffix">at the beginning of this month</string>
    <string name="activity_account_beginning_month_prefix">Beginning of this month:</string>
    <string name="nav_action_account">Account</string>
    <string name="activity_account_manifest_label" translatable="false">Account activity</string>
    <string name="activity_accounts_manifest_label" translatable="false">Accounts activity</string>
    <string name="dialog_account_name_hint">Enter account name</string>
    <string name="dialog_account_create_title">New account</string>
    <string name="dialog_account_edit_title">Edit account</string>
    <string name="account_delete_question">All assigned transactions will be deleted.&lt;br />This can &lt;i>not&lt;/i> be undone.&lt;br />&lt;br />Are you sure you want to delete account &lt;b>%1$s&lt;/b>?</string>
    <string name="account_saved_msg">Account saved</string>
    <string name="dialog_account_empty_name_impossible_msg">An empty account name is not possible</string>
    <string name="dialog_account_name_taken_msg">An account with this name already exists. Please choose a different one.</string>
    <string name="account_activity_balance_label">Balance for this account:</string>
    <string name="dialog_account_balance_hint">Enter balance</string>
    <string name="dialog_account_balance_beginning_month_label">Balance at the beginning of this month:</string>
    <string name="dialog_account_balance_change_desc">Changing the balance at the beginning of the month will result in the automatic creation of a transaction in the previous month. This transaction will add or subtract the difference so that your desired balance for the current month is achieved.</string>
    <string name="compensation_transaction_default_name">Compensation transaction</string>
    <string name="dialog_account_positive_label">Positive</string>
    <string name="dialog_account_negative_label">Negative</string>
    <string name="activity_tutorial_slide1_title">Welcome!</string>
    <string name="activity_tutorial_slide1_msg">Welcome to your privacy friendly Finance Manager. This app does not use any permissions.</string>
    <string name="activity_tutorial_slide2_title">Finance Manager</string>
    <string name="activity_tutorial_slide2_msg">You can manage your finances by tracking your earnings and expenses.</string>
    <string name="activity_tutorial_slide3_title">New Transactions</string>
    <string name="activity_tutorial_slide3_msg">"You can create new transactions by clicking on the plus button in the main view. Now you are able to enter the amount, a title, a date and a category. Furthermore you can specify if the transaction is an expense or income. "</string>
    <string name="activity_tutorial_slide4_title">Transaction overview</string>
    <string name="activity_tutorial_slide4_msg">In the main view you are able to see the total balance of your transactions, as well as a list with all transactions you entered. </string>
    <string name="category_budget">Budget</string>
    <string name="this_month">This Month</string>
    <string name="activity_category_budget_month_left">Budget balance this month:</string>
</resources>